execute Main