@@ -9,3 +9,8 @@ Studienarbeit Parsen mathematischer Formeln und Rechnen auf Zeitreihen
  - Maven, generate source and update folders
  - Build Project
  - Run Tests in src/test/java/mep
+
+## Run Main
+- Move to correct folder ```cd MathExprParserStudien```
+- Build project```mvn package```
+- Run Main```java -cp ".\target\MathExprParserStudien-1.0-SNAPSHOT.jar;.\target\lib\*" org.example.Main --add-exports org.graalvm.truffle/com.oracle.truffle.api.nodes=ALL-UNNAMED```
